--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,8 +6,9 @@ html lang='en' class='no-js'
 
     link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'
 
+    link rel='stylesheet' href='css/bootstrap.min.css' 
     link rel='stylesheet' href='css/reset.css' 
-    link rel='stylesheet' href='css/style.css' 
+    link rel='stylesheet' href='css/style.css'
     script src='js/modernizr.js'              
 
     title Carnotify
@@ -17,4 +18,5 @@ html lang='en' class='no-js'
     == yield
     
   script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
+  script src='js/bootstrap.min.js'
   script src='js/main.js'
