--- a/views/main.slim
+++ b/views/main.slim
@@ -1,3 +1,50 @@
+nav.navbar class='navbar-default'
+  .container-fluid
+    .navbar-header
+      button.navbar-toggle class='collapsed' type='button' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand href='#' Brand
+
+    .collapse class='navbar-collapse' id='bs-example-navbar-collapse-1'
+      ul.nav class='navbar-nav'
+        li.active
+          a href='#'
+            | Link
+            span.sr-only
+              | (current)
+        li
+          a href='#'
+            | Link
+        li.dropdown
+          a.dropdown-toggle href='#' data-toggle='dropdown' role='button' aria-expanded='false'
+            | Dropdown
+            span.caret
+          ul.dropdown-menu role='menu'
+            li
+              a href='#' Action
+            li
+              a href='#' Another action
+            li
+              a href='#' Something else here
+            li.divider
+            li
+              a href='#' Separated link
+            li.divider
+            li 
+              a href='#' One more separated link
+
+      form.navbar-form class='navbar-left' role='search'
+        .form-group
+          input.form-control type='text' placeholder='Search'
+        button.btn class='btn-default' type='submit'
+          | Submit
+      ul.nav class='navbar-nav navbar-right'
+        li
+          a href='#' Link
+
 header
   h1 Carnotify
 
