--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,15 +8,14 @@ html lang='en' class='no-js'
 
     link rel='stylesheet' href='css/bootstrap.min.css' 
     link rel='stylesheet' href='css/reset.css' 
-    link rel='stylesheet' href='css/style.css'
-    script src='js/modernizr.js'              
+    link rel='stylesheet' href='css/style.css' 
+    link rel='stylesheet' href='css/custom.css'           
 
     title Carnotify
 
   body
 
-    == yield
-    
+    == yield 
+
   script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
   script src='js/bootstrap.min.js'
-  script src='js/main.js'
