--- a/views/main.slim
+++ b/views/main.slim
@@ -6,98 +6,86 @@ nav.navbar class='navbar-default'
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href='#' Brand
+      a.navbar-brand href='#' CarNotify
 
     .collapse class='navbar-collapse' id='bs-example-navbar-collapse-1'
-      ul.nav class='navbar-nav'
-        li.active
-          a href='#'
-            | Link
-            span.sr-only
-              | (current)
-        li
-          a href='#'
-            | Link
-        li.dropdown
-          a.dropdown-toggle href='#' data-toggle='dropdown' role='button' aria-expanded='false'
-            | Dropdown
-            span.caret
-          ul.dropdown-menu role='menu'
-            li
-              a href='#' Action
-            li
-              a href='#' Another action
-            li
-              a href='#' Something else here
-            li.divider
-            li
-              a href='#' Separated link
-            li.divider
-            li 
-              a href='#' One more separated link
+      
 
-      form.navbar-form class='navbar-left' role='search'
-        .form-group
-          input.form-control type='text' placeholder='Search'
-        button.btn class='btn-default' type='submit'
-          | Submit
       ul.nav class='navbar-nav navbar-right'
         li
           a href='#' Link
 
-header
-  h1 Carnotify
+.container-fluid class='header'
+  h1 Maintenance Report
+  h3.header-sub-title Honda Accord 2002
 
 section#cd-timeline class='cd-container'
+
   .cd-timeline-block
     .cd-timeline-img class='cd-picture' 
       img src='img/cd-icon-picture.svg' alt='Picture'
 
     .cd-timeline-content
-      h2 Title of section 1
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.
-      a.cd-read-more href='#0' Read more
-      span.cd-date Jan 14
+      - @report_10000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-read-more class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_10000[0]['items'].first['intervalMileage']
 
   .cd-timeline-block
     .cd-timeline-img class='cd-movie'
       img src='img/cd-icon-movie.svg' alt='Movie'  
 
     .cd-timeline-content
-      h2 Title of section 2
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?
-      a.cd-read-more href='#0' Read more
-      span.cd-date Jan 18
+      - @report_15000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-read-more class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_15000[0]['items'].first['intervalMileage']
 
   .cd-timeline-block
     .cd-timeline-img class='cd-picture'
-      img src='img/cd-icon-picture.svg' alt='Picture'
+      h1.bubble-text 7.5k
 
     .cd-timeline-content
-      h2 Title of section 3
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.
-      a.cd-read-more href='#0' Read more
-      span.cd-date Jan 24
+      - @report_20000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-read-more class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_20000[0]['items'].first['intervalMileage']
 
   .cd-timeline-block
     .cd-timeline-img class='cd-location'
       img src='img/cd-icon-location.svg' alt='Location'
 
     .cd-timeline-content
-      h2 Title of section 4
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.
-      a.cd-readmore href='#0' Read more
-      span.cd-date Feb 14
+      - @report_30000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-readmore class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_30000[0]['items'].first['intervalMileage']
 
   .cd-timeline-block
     .cd-timeline-img class='cd-location'
       img src='img/cd-icon-location.svg' alt='Location'
 
     .cd-timeline-content
-      h2 Title of section 5
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.
-      a.cd-read-more href='#0' Read more
-      span.cd-date Feb 18
+      - @report_45000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-read-more class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_45000[0]['items'].first['intervalMileage']
+
+  .cd-timeline-block
+    .cd-timeline-img class='cd-location'
+      img src='img/cd-icon-location.svg' alt='Location'
+
+    .cd-timeline-content
+      - @report_60000[0]['items'].each do |item|
+        h2 = item['action']
+        p  = item['itemDescription']
+      a.cd-read-more class='btn btn-primary' href='#0' Read more
+      span.cd-date = @report_60000[0]['items'].first['intervalMileage']
 
   .cd-timeline-block
     .cd-timeline-img class='cd-movie'
@@ -107,3 +95,4 @@ section#cd-timeline class='cd-container'
       h2 Final Section
       p This is the content of the last section
       span.cd-date Feb26
+
