--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,12 +36,33 @@ header {
   font-size: 1.2em;
 }
 
+.panel {
+  margin: 0px;
+  border-width: 1px;
+  border-radius: 1px;
+}
+
+.panel-group {
+  margin: 0px;
+}
+.panel-heading {
+  padding: 10px;
+}
 .cd-timeline-content {
   background-color: #E0E0E0;
+  padding: 0px;
+  box-shadow: 0 1px 0 #d7e4ed;
+  border-radius: 4px;
 }
+
 .cd-timeline-content .cd-read-more {
   background-color: #008cba;
   border-color: #0079a1;
+}
+
+.cd-timeline-content .cd-read-more {
+  padding-top: -5px;
+  float: right;
 }
 
 .cd-timeline-img .cd-picture {
