--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,10 +9,6 @@ header, header h1 {
   margin-top: -1.2em;
 }
 
-header {
-  height: 6em;
-}
-
 #cd-timeline {
   margin-top: 2em;
 }
@@ -22,11 +18,12 @@ header {
 }
 
 .header {
+  height: 4.7em;
   margin-top: 1.2em;
   margin-bottom: 2em;
   text-align: center;
   font-size: 3em;
-  padding: 0em;
+  padding: 0 1em;
   color: black;
 }
 
@@ -39,6 +36,15 @@ header {
   margin: 0px;
   border-width: 1px;
   border-radius: 1px;
+}
+
+.panel-title {
+  font-size: 1.7em;
+}
+
+.panel-title a:hover {
+  text-decoration: none;
+  color: rgb(61, 61, 56);
 }
 
 .panel-body {
@@ -56,9 +62,9 @@ header {
   padding: 10px;
 }
 .cd-timeline-content {
-  background-color: #E0E0E0;
+  background-color: #F0F0F0;
   padding: 0px;
-  box-shadow: 0 2px 4px #d7e4ed;
+  box-shadow: 0 2px 5px #d7e4ed;
   border-radius: 4px;
 }
 
@@ -73,10 +79,5 @@ header {
 }
 
 .cd-timeline-img .cd-picture {
-  text-align: center;
-}
-
-.bubble-text {
-  padding-top: 1.4em;
   text-align: center;
 }
