--- a/views/main.slim
+++ b/views/main.slim
@@ -22,6 +22,7 @@ section#cd-timeline class='cd-container'
     .cd-timeline-img class='cd-picture' 
       h2 10k
 
+
     .cd-timeline-content
       #accordion.panel-group.tips
       .panel.panel-info href="#collapse1" data-toggle="collapse" data-parent="#accordion"
@@ -41,7 +42,6 @@ section#cd-timeline class='cd-container'
         #collapse2.panel-collapse.collapse
           .panel-body
             | A circular frame of hard material that may be solid or partly solid, is capable of turning on an axle, and holds the rubber cushion that contains compressed air.
-
   .cd-timeline-block
     .cd-timeline-img class='cd-movie'
       h2 15k  
@@ -114,6 +114,8 @@ section#cd-timeline class='cd-container'
   .cd-timeline-block
     .cd-timeline-img class='cd-picture'
       h2 20k
+    h3.multiples-right
+      | +10k
 
     .cd-timeline-content
       #accordion.panel-group.tips
@@ -208,6 +210,7 @@ section#cd-timeline class='cd-container'
             | A cartridge-filled canister placed in an engine's lubricating system to strain dirt and abrasive materials out of the oil.
 
   .cd-timeline-block
+
     .cd-timeline-img class='cd-location'
       h2 30k
 
