--- a/views/main.slim
+++ b/views/main.slim
@@ -114,8 +114,6 @@ section#cd-timeline class='cd-container'
   .cd-timeline-block
     .cd-timeline-img class='cd-picture'
       h2 20k
-    h3.multiples-right
-      | +10k
 
     .cd-timeline-content
       #accordion.panel-group.tips
@@ -208,7 +206,7 @@ section#cd-timeline class='cd-container'
         #collapse19.panel-collapse.collapse
           .panel-body
             | A cartridge-filled canister placed in an engine's lubricating system to strain dirt and abrasive materials out of the oil.
-
+      span.cd-date +10k
   .cd-timeline-block
 
     .cd-timeline-img class='cd-location'
@@ -242,4 +240,5 @@ section#cd-timeline class='cd-container'
         #collapse22.panel-collapse.collapse
           .panel-body
             | A belt that transfers the rotation of the engine through the crankshaft pulley to drive various devices, such as the alternator, water pump, air conditioning compressor or power steering pump.
-
+      span.cd-date
+        | + 10k, 15k
